fixing menu button on mobile

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     padding: 0;
 }
 
+
 body.main-page {
     background-image: url("https://www.hdwallpapers.in/download/trees_snow_shore_river_winter_forest_fog_background_4k_hd_nature-3840x2160.jpg");
     background-size: cover;
@@ -11,7 +12,7 @@ body.main-page {
 }
 
 body {
-    background-image: url("https://www.creativefabrica.com/wp-content/uploads/2024/02/08/White-Snow-Forest-Landscape-Background-Graphics-90484485-1.jpg");
+    background-image: url("https://img.freepik.com/premium-photo/tranquil-winter-wonderland-wallpaper_1089503-9274.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -787,3 +788,15 @@ h1 {
         opacity: 0.6 !important;
     }
 }
+
+    .menu-links {
+        opacity: 0;
+        max-height: 0;
+        overflow: hidden;
+        transition: 0.3s ease;
+    }
+
+    .menu-links.open {
+        opacity: 1;
+        max-height: 300px;
+    }
